// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event renders as expected 1`] = `
<WithStyles(ForwardRef(Card))
  className="card"
>
  <WithStyles(ForwardRef(CardHeader))
    avatar={
      <WithStyles(ForwardRef(Avatar))
        aria-label="teamPhoto"
        src="https://picsum.photos/48"
      />
    }
    subheader={
      <Subheader
        startTime={1557029700000}
      />
    }
    title="foo"
  />
  <WithStyles(ForwardRef(CardContent))>
    <Location
      locationName="Somewhere USA"
    />
  </WithStyles(ForwardRef(CardContent))>
  <WithStyles(ForwardRef(CardActions))
    disableSpacing={true}
  >
    <WithStyles(EventActions)
      eventId={1}
      rsvpStatus="NONE"
      teamId={1}
    />
  </WithStyles(ForwardRef(CardActions))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Event when the event has no startTime renders as expected 1`] = `
<WithStyles(ForwardRef(Card))
  className="card"
>
  <WithStyles(ForwardRef(CardHeader))
    avatar={
      <WithStyles(ForwardRef(Avatar))
        aria-label="teamPhoto"
        src="https://new.url"
      />
    }
    subheader={<Subheader />}
    title="foo"
  />
  <WithStyles(ForwardRef(CardContent))>
    <Location
      locationName="Somewhere USA"
    />
  </WithStyles(ForwardRef(CardContent))>
  <WithStyles(ForwardRef(CardActions))
    disableSpacing={true}
  >
    <WithStyles(EventActions)
      eventId={1}
      rsvpStatus="NONE"
      teamId={1}
    />
  </WithStyles(ForwardRef(CardActions))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Event when the event has no team photo url renders as expected 1`] = `
<WithStyles(ForwardRef(Card))
  className="card"
>
  <WithStyles(ForwardRef(CardHeader))
    avatar={
      <WithStyles(ForwardRef(Avatar))
        aria-label="teamPhoto"
        src=""
      />
    }
    subheader={
      <Subheader
        startTime={1557029700000}
      />
    }
    title="foo"
  />
  <WithStyles(ForwardRef(CardContent))>
    <Location
      locationName="Somewhere USA"
    />
  </WithStyles(ForwardRef(CardContent))>
  <WithStyles(ForwardRef(CardActions))
    disableSpacing={true}
  >
    <WithStyles(EventActions)
      eventId={1}
      rsvpStatus="NONE"
      teamId={1}
    />
  </WithStyles(ForwardRef(CardActions))>
</WithStyles(ForwardRef(Card))>
`;

exports[`EventWithStyles renders 1`] = `
<Event
  classes={
    Object {
      "card": "Event-card-1",
    }
  }
  eventId={1}
  location="Somewhere USA"
  rsvpStatus="NONE"
  startTime={1557029700000}
  teamId={1}
  teamPhotoUrl="https://picsum.photos/48"
  title="foo"
/>
`;
